--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
     
         <div class="project">
             <a href="sample1/index.html">
-                Cat ch Love: 이 프로그램은 나만의 캐리커쳐로 고양이를 보여줍니다.
+                #1 Cat ch Love: 이 프로그램은 나만의 캐리커쳐로 고양이를 보여줍니다.
             </a>
         </div>
     
         <div class="project">
             <a href="sample2/index.html">
-                Changing life: 이 프로그램은 다양한 색상으로 변화하는 배경을 만듭니다.
-                'R' 또는 'L'키를 눌러 보세요. 마우스를 움직여보세요.
+               #4 Shinning Cat : 이 프로그램은 움직이는 캐리커쳐 고양이를 보여줍니다.
+                별이 깜빡이며 빛나고, 고양이가 움직이며 표정이 바뀝니다. 하트의 모양도 바뀝니다.
             </a>
         </div>
 
         <div class="project">
             <a href="sample2/index.html">
-                3: 이 프로그램은
+              #2 Me: 이 프로그램은 자화상입니다.
             </a>
         </div>
 
         <div class="project">
             <a href="sample2/index.html">
-                4: 이 프로그램은 다양한 색상으로 변화하는 배경을 만듭니다
+                #3 Changing life: 이 프로그램은 다양한 색상으로 변화하는 배경을 만듭니다.
+                'J','K','L'키를 눌러 보세요. 마우스를 움직여보세요.
             </a>
         </div>
 
@@ -43,3 +44,4 @@
     </section>
 </body>
 </html>
+
