--- a/index.html
+++ b/index.html
@@ -2,46 +2,29 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js 작품 모음</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>나의 p5.js 작품</h1>
-        <p>아래 작품을 클릭하여 감상해 보세요!</p>
-    </header>
+    <h1>나의 p5.js 작품</h1>
 
-    <section id="projects">
+    <table border="1" width="100%">
+        <tr>
+            <td>
+                <a href="sample1/index.html">#1 Cat ch Love</a>
+            </td>
+            <td>
+                <a href="sample2/index.html">#2 Me</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="sample3/index.html">#3 Changing life</a>
+            </td>
+            <td>
+                <a href="sample4/index.html">#4 Shinning Cat</a>
+            </td>
+        </tr>
+    </table>
 
-        <div class="project">
-            <a href="sample1/index.html">
-                <h2>#1 Cat ch Love</h2>
-                <p>나만의 캐리커쳐 고양이를 보여줍니다.</p>
-            </a>
-        </div>
-
-        <div class="project">
-            <a href="sample2/index.html">
-                <h2>#2 Me</h2>
-                <p>자화상입니다.</p>
-            </a>
-        </div>
-
-        <div class="project">
-            <a href="sample3/index.html">
-                <h2>#3 Changing life</h2>
-                <p>키보드와 마우스로 배경색이 변화합니다.</p>
-            </a>
-        </div>
-
-        <div class="project">
-            <a href="sample4/index.html">
-                <h2>#4 Shinning Cat</h2>
-                <p>반짝이는 움직임과 표정 변화가 있는 고양이!</p>
-            </a>
-        </div>
-
-    </section>
 </body>
 </html>
