--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>p5.js 작품 모음</title>
 </head>
 <body>
-    <h1>나의 p5.js 작품</h1>
+    <h1>경제학도의 졸업작품전시회</h1>
 
     <table width="100%">
         <tr>
@@ -41,3 +41,4 @@
 
 </body>
 </html>
+
